Feature: finaliza integração com testes